<resources>
    <string name="app_name">Warzone Radar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_main">Warzone Radar</string>
    <string name="title_home">Home Map</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_personal">Personal</string>
    <string name="title_activity_login">Login</string>
    <string name="title_setting">Setting</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hide_down">hide</string>
    <string name="comment_content">input comment</string>
    <string name="send">send</string>

</resources>