<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <!--    <TextView-->
    <!--        android:id="@+id/text_dashboard"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:textAlignment="center"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ListView
        android:id="@+id/comment_list"
        android:layout_width="411dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/rl_enroll"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/comment_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/comment"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/comment" />

        <ImageView
            android:id="@+id/chat"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/chat" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_comment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/hide_down_icon"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/hide_down"

            android:layout_marginStart="22dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/hide_down"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/hide_down"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:drawableBottomCompat="@drawable/ic_launcher_foreground" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/hide_down"
            android:background="@color/grey" />

        <EditText
            android:id="@+id/comment_content"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/hide_down"
            android:background="@null"
            android:hint="@string/comment_content"
            android:singleLine="true"
            android:textSize="15sp"
            android:inputType="textMultiLine"/>

        <View
            android:id="@+id/view3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/comment_content"
            android:background="@color/grey" />

        <Button
            android:id="@+id/comment_send"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>